# xunnifangzhen

./: README.md  readme.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/practice/: my_property.h
devel/lib/hello_ros/: listener  talker
devel/lib/pkgconfig/: hello_ros.pc  practice.pc
devel/lib/python3/dist-packages/practice/msg/: __init__.py  _my_property.py
devel/share/common-lisp/ros/practice/msg/: _package.lisp  _package_my_property.lisp  my_property.lisp  practice-msg.asd
devel/share/gennodejs/ros/practice/msg/: _index.js  my_property.js
devel/share/hello_ros/cmake/: hello_rosConfig.cmake
devel/share/practice/cmake/: practice-msg-paths.cmake  practiceConfig.cmake
devel/share/roseus/ros/practice/: manifest.l
devel/share/roseus/ros/practice/msg/: my_property.l
src/hello_ros/: CMakeLists.txt  package.xml
src/hello_ros/launch/: hello_ros.launch
src/hello_ros/src/: listener.cpp  talker.cpp
src/practice/: CMakeLists.txt
src/practice/launch/: property.launch
src/practice/msg/: my_property.msg
src/practice/src/: property_listener.cpp  property_talker.cpp
